# ress_smalltalk

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/: aio_utils.py  analytics.py  app.py  config.py  crypt.py  telegram_commands.py  weather.py
src/tests/: test_async_speed.py
